# VRF

./: .gitignore  Cargo.toml
src/: lib.rs
vrf-program/: Cargo.toml  README.md
vrf-program/src/: client.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  vrf.rs
vrf-standalone/: Cargo.toml
