[package]
name = "vrf-program"
version = "0.1.0"
edition = "2021"
description = "Verifiable Random Function (VRF) implementation for Solana"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.17.4"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0.40"
curve25519-dalek = "3.2.1"
sha3 = "0.10.7"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
arrayref = "0.3.7"
solana-sdk = "1.17.4"
solana-client = "1.17.4"
clap = "2.33.3"

[dev-dependencies]
solana-program-test = "1.17.4"

[lib]
crate-type = ["cdylib", "lib"]
